--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,37 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body{
+  height: 100vh;
+  background: url("/images/bg-img.png");
+  background-size: 100% 100%;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.intro-page-container{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.title-heading{
+  font-family: 'karla',sans-serif;
+  color: #293264;
+  font-weight: 700;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.description{
+  font-family: 'Inter';
+  font-weight: 400;
+  color: #293264;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.btn{
+  background: #4D5B9E;
+  border: 0;
+  width: 150px;
+  height: 40px;
+  border-radius: 15px;
+  color: #F5F7FB;
+  font-family: inter;
+  cursor: pointer;
 }
