--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,30 @@ body{
 .questions-container{
   padding: 40px 75px;
 }
-.container{}
+.container{
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 .question{
   font-family: 'Karla';
   font-weight: 700;
   color: #293264;
-  /* font-size: 16px; */
 }
 .options{
-  
+  display: flex;
+  gap: 20px;
+}
+.option-btn{
+  background-color: #F5F7FB;
+  border: 0.794239px solid #4D5B9E;
+  border-radius: 7.94239px;
+  padding: 5px 10px;
+  color: #293264;
+  font-family: inter;
+  font-weight: 400;
+  cursor: pointer;
 }
 .line{
   border: 0.794239px solid #DBDEF0;
