--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,33 @@ body{
 .line{
   border: 0.794239px solid #DBDEF0;
 }
+.loader {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.loader::after {
+  content: "";
+  width: 50px;
+  height: 50px;
+  border: 8px solid #d9dcf1;
+  border-top-color: #293264;
+  border-right-color: #293264;
+  border-radius: 50%;
+  animation: loading ease 1.5s infinite;
+}
+@keyframes loading {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(2turn);
+  }
+}
